song title moved to top and alignment corrected

--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@ body{
     justify-items: center;
     flex-direction: column;
 }
+
+.right{
+    padding: 90px;
+}
   
 /*song cover area*/
 
@@ -103,7 +107,7 @@ body{
    position: absolute;
    width: 100%;
    bottom: 0%;
-   left: 60px;
+   left: 40px;
    height: 0px;
    display: flex;
    align-items: center;
@@ -156,6 +160,24 @@ body{
     background: #ce3636 ;
 }
 
+.right #title{
+	position: absolute;
+	top: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	text-transform: capitalize;
+	color: #fff;
+	font-size: 35px;
+}
+.right #artist{
+	position: absolute;
+	top: 110px;
+	left: 50%;
+	transform: translateX(-50%);
+	text-transform: capitalize;
+	color: #fff;
+	font-size: 18px;
+}
 
   
   
